docs(tapdata): record kafka source qualification